[package]
name = "pt"
version = "0.1.0"
authors = ["Christian <christian-carlsson@outlook.com>"]

[dependencies]
serde = "1.0.30"
serde_derive = "1.0.30"
serde_json = "1.0.11"
png = "0.11.0"
cgmath = "0.16.0"
pcg_rand = "0.7.1"
rand = "0.4.2"
simd = "0.2.1"
time = "0.1.39"

[features]

[profile.release]
lto = true
debug = false
